--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
-<h1>hello world</h1>
-<h2>what a lovely day</h2>
+<!DOCTYPE html>
+<html>
+<head>
+  <title></title>
+</head>
+<body>
+  <h1>hello world</h1>
+  <p>
+    call me Ishmael.
+  </p>
+</body>
+</html>
